<resources>
    <string name="app_name">QR Accesos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesion</string>

    <string name="menu_home">Eventos</string>
    <string name="menu_gallery">Nuevo Evento</string>
    <string name="menu_slideshow">Lista Contactos</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="menu_terminoscondiciones">Términos y Condiciones</string>
    <string name="menu_aviso">Aviso de Privacidad</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="menu_resetpassword">Cambiar Contraseña</string>

    <string name="home_second">Home Second</string>

    <!--    Datos estaticos del fragment de Nuevo Evento-->
    <string name="datosevento">DATOS DEL EVENTO</string>
    <string name="nuevoinvitado">NUEVO INVITADO</string>
    <string name="invitados">INVITADOS</string>
    <string name="avprivacidad">AVISO DE PRIVACIDAD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
